application/views/scss/components/_collection-product.scss
.ftshops {
    &_item {
        background: #fff;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        grid-gap: 3rem;
        padding: 2rem 0;
        @include media-breakpoint-down(sm) {
            flex-direction: column;
        }

        &:nth-child(even) {
            flex-direction: row-reverse;
        }
    }
    .shop-detail-side {
        text-align: center;
        position: relative;
        display: flex;
        align-items: center;
        justify-content: center;
        flex: 1;
        max-width: 300px;
        border-radius: $radius4;
        border: $border;
        background-color: $bg-gray;
        position: relative;
        overflow: hidden;
        @include media-breakpoint-down(lg) {
            max-width: 260px;
        }
        @include media-breakpoint-down(sm) {
            max-width: 100%;
            margin-bottom: 1rem;
        }
        &:after {
            box-sizing: content-box;
            width: 0;
            height: 12.5rem;
            border: 180px solid $secondary-color;
            border-top: 0 solid;
            border-bottom: 35px solid rgba(0, 0, 0, 0);
            color: rgba(0, 0, 0, 1);
            text-overflow: clip;
            position: absolute;
            top: 0;
            //content: "";
        }
        .products__rating {
            justify-content: center;
        }
        .shop-detail-inner {
            display: flex;
            align-items: center;
            flex-direction: column;
            position: relative;
            z-index: 1;
        }
    }
    .product-wrapper {
        flex: 1;
        border-radius: $radius4;
        @include media-breakpoint-down(md) {
            overflow-x: auto;
        }
        .products {
            height: 100%;
        }
    }

    &_logo {
        background: #fff;
        border-radius: 50%;
        overflow: hidden;
        width: 142px;
        height: 142px;
        aspect-ratio: 1/1;
        margin: 20px auto;
        position: relative;
        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.11);
        display: flex;
        align-items: center;
        justify-content: center;
        //padding: 1rem;
        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
        }
    }
    &_detail {
        font-size: 1rem;
        margin-bottom: 1rem;
    }

    &_name {
        font-size: 1.15em;
        font-weight: 600;
    }
    &_location {
        color: lighten($txt-body, 50%);
        font-size: 0.9em;
    }
    &_body {
        background: #fff;
        .products {
            float: left;
            width: 50%;
            padding: 20px;
            border-#{$end-direction}: $border;
            &:last-child {
                border-#{$end-direction}: none;
            }
        }
    }
}

.category-product-layout-1 {
    .products {
        height: 100%;
        border-radius: 0;
        border: none;
        .content-overlay {
            background: rgba(0, 0, 0, 0.7);
            position: absolute;
            height: 100%;
            width: 100%;
            #{$start-direction}: 0;
            top: 0;
            bottom: 0;
            #{$end-direction}: 0;
            opacity: 0;
            transition: all 0.4s ease-in-out 0s;
            z-index: 1;
            pointer-events: none;
        }
        &:hover {
            .content-overlay {
                opacity: 1;
            }
            .content-details {
                top: 50%;
                #{$start-direction}: 50%;
                opacity: 1;
            }
        }
    }
    .ft-pro {
        position: relative;
        background-color: #fff;
        .tag--soldout {
            top: auto;
            bottom: 20px;
        }
        &.ft-pro-1 {
            grid-column-start: 1;
            grid-column-end: 3;
            grid-row-start: 1;
            grid-row-end: 3;
            @include media-breakpoint-down(sm) {
                grid-column-end: 3;

                grid-row-end: 2;
            }
            .products {
                padding: 0;
            }
        }
    }
}

.product-layout-2 {
    display: grid;
    grid-gap: 1px;
    grid-template-columns: repeat(2, 1fr);
    @include media-breakpoint-up(lg) {
        grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
        grid-gap: 3rem;
    }
    .product-item {
        display: flex;
        align-items: center;
        justify-content: space-between;
        height: 100%;
        flex-direction: column;
        @include media-breakpoint-up(lg) {
            flex-direction: row;
        }
        .products-body {
            position: relative;
            width: 100%;
            @include media-breakpoint-up(lg) {
                width: 150px;
            }
        }
        .products-img {
            margin: 0;
        }
        .products-foot {
            @include media-breakpoint-up(lg) {
                padding: 20px;
                width: calc(100% - 150px);
                text-align: #{$start-direction};
            }
            .products-title {
                @include media-breakpoint-up(lg) {
                    padding-#{$start-direction}: 0;
                    //margin: 0;
                }
            }
            .products-price {
                justify-content: inherit;
            }
        }
    }
}

.product-layout-3 {
    // max-width: 1000px;
    margin: auto;
    @include media-breakpoint-up(lg) {
        display: grid;
        column-gap: 3rem;
        grid-template-columns: repeat(4, 1fr);
    }
    .products {
        height: 100%;
        display: flex;
        align-content: center;
        &-body {
            flex: 1;
        }
        &-foot {
            background: $bg-white;
            flex: 1;
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            padding: 0;
            min-height: 50%;
            @include media-breakpoint-up(lg) {
                min-height: 234px;
            }
        }

        .products-img {
            margin: 0;
            //border: $border;
        }
    }
    .grid {
        overflow: hidden;
        &-1 {
            grid-column-start: 1;
            grid-column-end: 3;
            grid-row-start: 1;
            grid-row-end: 3;
            .products-foot {
                max-width: 234px;
                width: 100%;
                background-color: #fff;
                position: absolute;
                bottom: 0;
                right: 0;
            }
        }
        &-2 {
            grid-column-start: 3;
            grid-column-end: 5;
            grid-row-start: 1;
            grid-row-end: 2;
            .products {
                flex-direction: row-reverse;
            }
        }
        &-3 {
            grid-column-start: 3;
            grid-column-end: 5;
            grid-row-start: 2;
            grid-row-end: 3;
        }
    }
}

.content-details {
    color: #fff;
    position: absolute;
    z-index: 1;
    text-align: center;
    padding-#{$start-direction}: 1em;
    padding-#{$end-direction}: 1em;
    width: 100%;
    top: 80%;
    #{$start-direction}: 50%;
    opacity: 0;
    transform: translate(-50%, -50%);

    transition: all 0.3s ease-in-out 0s;
}

